tests/paczka1/fuzzy1/64934207.err
Error in line 2: X5QbRe0zBIS S801 92,7
Error in line 11: i0Ht S801 60,6
Error in line 8: S801 S801 66,0
Error in line 27: IpoyZM A571 33,9
Error in line 35: IpoyZM A571 22,2
